adding comments in all files and deleting slider from services.html, whyme.html, form.html and adding some indetation

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	  <meta name="keywords" content="HTML,CSS,JavaScript">
 	  <meta name="author" content="Md Asaduzzaman Rana">
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Portfolio website Designs</title>
+      <title>React|Front-end|Webdesign|WordPress</title>
       <link rel="icon" href="images/fav-icon.ico" type="image/x-icon"/>
       <link type="text/css" rel="stylesheet" href="css/font-awesome.min.css"/>
 	  <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"/>
@@ -15,6 +15,7 @@
    </head>
    
     <body>
+    	
 		<!-- header section start -->
 		<section id="header">
 			 <div class="container">
