--- a/whyme.html
+++ b/whyme.html
@@ -36,7 +36,7 @@
 							</div><!--  -->
 
 							<!-- Collect the nav links, forms, and other content for toggling -->
-							<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+							<div class="collapse navbar-collapse menu_bg" id="bs-example-navbar-collapse-1">
 								<ul class="nav navbar-nav">
 									<li><a href="index.html">Portfolio.</a></li>
 									<li><a href="services.html">Services.</a></li>
