all files are changed

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							</div><!--  -->
 
 							<!-- Collect the nav links, forms, and other content for toggling -->
-							<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+							<div class="collapse navbar-collapse menu_bg" id="bs-example-navbar-collapse-1">
 								<ul class="nav navbar-nav">
 									<li><a href="#portfolio">Portfolio.</a></li>
 									<li><a href="services.html">Services.</a></li>
@@ -46,7 +46,7 @@
 								</ul>
 							    <ul class="nav navbar-nav navbar-right">
 									<div class="logo">
-										<a href="http://mdasaduzzamanrana.xyz/"><img src="images/logo.png"/></a>
+										<a target="_blank" href="http://mdasaduzzamanrana.xyz/"><img alt="logo" src="images/logo.png"/></a>
 									</div><!-- logo end -->
 								</ul>
 							</div><!-- navbar-collapse -->
