--- a/services.html
+++ b/services.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-	  <meta charset="UTF-8">
-	  <meta name="description" content="Portfolio Website">
-	  <meta name="keywords" content="HTML,CSS,JavaScript">
-	  <meta name="author" content="Md Asaduzzaman Rana">
-	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>React|Front-end|Webdesign|WordPress</title>
-      <link rel="icon" href="images/fav-icon.ico" type="image/x-icon"/>
-      <link type="text/css" rel="stylesheet" href="css/font-awesome.min.css"/>
-	  <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"/>
-      <link type="text/css" rel="stylesheet" href="css/style.css"/>
-      <link type="text/css" rel="stylesheet" href="css/responsive.css"/>
+		<meta charset="UTF-8" />
+		<meta name="description" content="Portfolio Website"/>
+		<meta name="keywords" content="HTML,CSS,JavaScript"/>
+		<meta name="author" content="Md Asaduzzaman Rana"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+		<title>React|Front-end|Webdesign|WordPress</title>
+		<link rel="icon" href="images/fav-icon.ico" type="image/x-icon"/>
+		<link type="text/css" rel="stylesheet" href="css/font-awesome.min.css"/>
+		<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"/>
+		<link type="text/css" rel="stylesheet" href="css/style.css"/>
+		<link type="text/css" rel="stylesheet" href="css/responsive.css"/>
    </head>
    
     <body>
