fixing browser support and css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 		<meta name="keywords" content="HTML,CSS,JavaScript">
 		<meta name="author" content="Md Asaduzzaman Rana">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	   <title>React|Front-end|Webdesign|WordPress</title>
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+		<title>React|Front-end|Webdesign|WordPress</title>
+		
 	   <link rel="icon" href="images/fav-icon.ico" type="image/x-icon"/>
 	   <link type="text/css" rel="stylesheet" href="css/font-awesome.min.css"/>
 		<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"/>
