--- a/form.html
+++ b/form.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Portfolio Website"/>
-		<meta name="keywords" content="HTML,CSS,JavaScript"/>
-		<meta name="author" content="Md Asaduzzaman Rana"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-		<title>React|Front-end|Webdesign|WordPress</title>
-
-		<link rel="icon" href="images/fav-icon.ico" type="image/x-icon"/>
-		<link type="text/css" rel="stylesheet" href="css/font-awesome.min.css"/>
-		<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"/>
-		<link type="text/css" rel="stylesheet" href="css/style.css"/>
-		<link type="text/css" rel="stylesheet" href="css/responsive.css"/>
-   </head>
+			<head>
+					<meta charset="UTF-8">
+					<meta name="description" content="Portfolio Website">
+					<meta name="keywords" content="HTML,CSS,JavaScript">
+					<meta name="author" content="Md Asaduzzaman Rana">
+					<meta name="viewport" content="width=device-width, initial-scale=1.0">
+					<meta http-equiv="X-UA-Compatible" content="ie=edge">
+			
+					<title>React|Front-end|Webdesign|WordPress</title>
+					
+					 <link rel="icon" href="images/fav-icon.ico" type="image/x-icon"/>
+					 <link type="text/css" rel="stylesheet" href="css/font-awesome.min.css"/>
+					<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"/>
+					 <link type="text/css" rel="stylesheet" href="css/style.css"/>
+					 <link type="text/css" rel="stylesheet" href="css/responsive.css"/>
+				 </head>
    
     <body>
 
@@ -33,7 +34,7 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 							  </button><!-- navbar-header end -->
-							  <a class="navbar-brand" href="http://mdasaduzzamanrana.xyz/">
+							  <a class="navbar-brand" href="index.html">
 								<i class="fa fa-home"></i>
 							  </a>
 							</div><!--  -->
