--- a/services.html
+++ b/services.html
@@ -33,7 +33,7 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 							  </button><!-- navbar-header end -->
-							  <a class="navbar-brand" href="http://mdasaduzzamanrana.xyz/">
+							  <a class="navbar-brand" href="index.html">
 								<i class="fa fa-home"></i>
 							  </a>
 							</div><!--  -->
